COMMERCE-1641 Fix clickable portlet controls if visible

--- a/commerce-theme-speedwell/commerce-theme-speedwell/src/css/_custom.scss
+++ b/commerce-theme-speedwell/commerce-theme-speedwell/src/css/_custom.scss
@@ -63,6 +63,12 @@ body:not(.signed-in) {
   }
 }
 
+body.controls-visible {
+  .speedwell-content {
+    padding-top: 80px !important;
+  }
+}
+
 .speedwell-content {
   &--wide {
     margin: 0 auto;
